GL/Projet_GL/src/test/deca/context/invalid/classes/double_class.deca
// Description:
// Test contextuel : définition multiple d'une classe.
//
// Resultats:
//    Ligne 8: Classe A deja definie.
//    Erreur affichée: Class already defined: A
//

class A {
}

class A {
}

{
}
